objects/ScCollection_Hardship__c.object
<CustomObject>
    <description>This object is used to capture all Hardship Details related to a contract</description>
    <fields>
        <fullName>Hardship_Completed__c</fullName>
        <inlineHelpText>Date Hardship was capitalised</inlineHelpText>
        <label>Hardship Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hardship_Outcome__c</fullName>
        <label>Hardship Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Cured capped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cured not capped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not cured</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_was_SOFP_Completed__c</fullName>
        <label>How was SOFP Completed?</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollectionAfter_Tax_Wages_Borrower_3__c</fullName>
        <label>After Tax Wages (Borrower 3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Account_Number_Direct_Debit__c</fullName>
        <label>Account Number (Direct Debit)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Ad_Hoc_Date_1__c</fullName>
        <label>Ad Hoc Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Ad_Hoc_Instalment__c</fullName>
        <label>Ad Hoc Instalment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Additional__c</fullName>
        <label>Additional</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_After_Tax_Wages_Borrower_1__c</fullName>
        <label>After Tax Wages (Borrower 1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_After_Tax_Wages_Borrower_2__c</fullName>
        <label>After Tax Wages (Borrower 2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_After_Tax_Wages_Borrower_4__c</fullName>
        <label>After Tax Wages (Borrower 4)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Any_Other_Cost__c</fullName>
        <label>Any Other Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Arrears_to_be_capped__c</fullName>
        <label>Arrears to be capped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_BSB_1__c</fullName>
        <label>BSB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_BSB_Number_Direct_Debit_1__c</fullName>
        <label>BSB Number (Direct Debit)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_BSB_Number_Direct_Debit__c</fullName>
        <label>BSB Number (Direct Debit)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_BSB__c</fullName>
        <label>BSB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Basic__c</fullName>
        <label>Basic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Bonds__c</fullName>
        <label>Bonds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_COS_Date__c</fullName>
        <label>COS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Car_Insurance__c</fullName>
        <label>Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Clothing__c</fullName>
        <label>Clothing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract_Name__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
	NOT( ISBLANK( scCollection_Loan_Account__c ) ) 
	, 
	scCollection_Loan_Account__r.Name  
	, 
	IF(
	  NOT( ISBLANK(ScCollection_Contract__c ) ) 
	  ,
		IF(
			ScCollection_Contract__r.ScCollection_Source_System_Name__c == &quot;MORTGAGE&quot;
		,
			left( ScCollection_Contract__r.Name ,find(&apos;_&apos;, ScCollection_Contract__r.Name)-1)
		,
			ScCollection_Contract__r.Name
		)
	  ,
	  &quot;&quot;
	) 
)</formula>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Contract</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Hardship</relationshipLabel>
        <relationshipName>Hardship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Country_Code__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
NOT( ISBLANK( ScCollection_Contract__c ) ) 
, 
    ScCollection_Contract__r.ScCollection_Country_Code__c   
, 
 &quot;&quot; 
)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Credit_Card_1__c</fullName>
        <label>Credit Card (1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Credit_Card_2__c</fullName>
        <label>Credit Card (2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Credit_Card_3__c</fullName>
        <label>Credit Card (3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Date_docs_to_be_returned__c</fullName>
        <label>Date (docs to be returned)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Date_payments_to_recommence__c</fullName>
        <label>Date(payments to recommence)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Dividends__c</fullName>
        <label>Dividends</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_EREF_Account_number__c</fullName>
        <label>EREF Account number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Electricity_Gas__c</fullName>
        <label>Electricity/Gas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Entertainment__c</fullName>
        <label>Entertainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_External_Id__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
 AND(NOT(ISBLANK( ScCollection_Contract__c )),OR( ScCollection_Contract__r.ScCollection_Source_System_Name__c == &quot;MORTGAGE&quot;, ScCollection_Contract__r.ScCollection_Source_System_Name__c == &quot;PAF&quot; ))  
, 
ScCollection_Contract__r.collect__External_ID__c 
, 
&quot;&quot; 
)</formula>
        <label>External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Followed_up_Date__c</fullName>
        <label>Followed up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Food__c</fullName>
        <label>Food</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Frequency_of_arrangement__c</fullName>
        <label>Frequency of arrangement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Hardhsip_Decision__c</fullName>
        <label>Hardship Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_HardshipAssistancePeriod__c</fullName>
        <formula>IF(ISNULL(ScCollection_HardshipCommencementDate__c),&quot;&quot;,
TEXT(FLOOR((ScCollection_HardshipExpiryDate__c-ScCollection_HardshipCommencementDate__c)/365.2425)) &amp; &quot; Years &quot; &amp; 
TEXT(FLOOR(MOD((ScCollection_HardshipExpiryDate__c-ScCollection_HardshipCommencementDate__c),365.2425)/30)) &amp; &quot; Months &quot; &amp;
Text(Floor(MOD(Floor(MOD((ScCollection_HardshipExpiryDate__c-ScCollection_HardshipCommencementDate__c),365.2425)),30)/7)) &amp; &quot; Weeks &quot; &amp;
Text(Floor(MOD(Floor(MOD((ScCollection_HardshipExpiryDate__c-ScCollection_HardshipCommencementDate__c),365.2425)),30))) &amp; &quot; Days &quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hardship Assistance Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_HardshipCommencementDate__c</fullName>
        <label>Hardship Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_HardshipExpiryDate__c</fullName>
        <label>Hardship Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_HardshipRequestedDate__c</fullName>
        <label>Hardship Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Hardship_Approval_Date__c</fullName>
        <label>Hardship Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Hardship_Approval__c</fullName>
        <label>Hardship Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Maintain payment and cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full payment moratorium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce payment moratorium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time to sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time to discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time to refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release of superannuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long term arrangement to pay</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Hardship_Assistance_Period__c</fullName>
        <label>Hardship Assistance Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Hardship_Broken__c</fullName>
        <label>Hardship Broken</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Hardship_Decline_Date__c</fullName>
        <label>Hardship Decline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Hardship_Decline__c</fullName>
        <label>Hardship Decline</label>
        <picklist>
            <picklistValues>
                <fullName>No capacity to pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistance not required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrangement not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient information to assess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer not contactable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Insurance__c</fullName>
        <label>Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Judgement_Obtained__c</fullName>
        <label>Judgement Obtained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_LOB_Identifier__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
NOT( ISBLANK( scCollection_Loan_Account__c ) ) 
, 
&quot;CL Loan&quot;
, 
IF(
  NOT( ISBLANK(ScCollection_Contract__c ) ) 
  ,
    ScCollection_Contract__r.ScCollection_Source_System_Name__c 
  ,
  &quot;&quot;
) 
)</formula>
        <label>LOB Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Letter_of_finance_approval__c</fullName>
        <label>Letter of finance approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Loan_1__c</fullName>
        <label>Loan (1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Loan_2__c</fullName>
        <label>Loan (2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Market_Value_ofThisProperty__c</fullName>
        <label>Market Value of This Property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Monthly_Amount__c</fullName>
        <label>Monthly Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mortgage_1__c</fullName>
        <label>Mortgage(1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mortgage_2__c</fullName>
        <label>Mortgage(2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Motor_Vehicles__c</fullName>
        <label>Motor Vehicles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Number_of_payments__c</fullName>
        <label>Number of payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_OtherPleaseStatefamilyall_1__c</fullName>
        <label>Other (Please State)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_OtherPleaseStatefamilyall_2__c</fullName>
        <label>Other (Please State)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Other_Investments__c</fullName>
        <label>Other Investments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Other_Please_State_1__c</fullName>
        <label>Other (Please State)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Other_Please_State_2__c</fullName>
        <label>Other (Please State)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Other_Please_State_3__c</fullName>
        <label>Other (Please State)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Other_Real_Estate_Owned__c</fullName>
        <label>Other Real Estate Owned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Personal_Grooming_etc__c</fullName>
        <label>Personal (Grooming etc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Petrol__c</fullName>
        <label>Petrol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Prescriptions__c</fullName>
        <label>Prescriptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Proposed_Repayment_Plan__c</fullName>
        <label>Proposed Repayment Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rates_Water__c</fullName>
        <label>Rates/Water</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Reason_for_Hardship__c</fullName>
        <label>Reason for  Hardship</label>
        <picklist>
            <picklistValues>
                <fullName>Unemployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illness or Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overcommitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrower Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternity/Parental Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Disaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incarceration</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Reassessment_Date__c</fullName>
        <label>Reassessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Reduced_interest_Rate__c</fullName>
        <label>Reduced interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Reduced_payment_amount__c</fullName>
        <label>Reduced payment amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Registration__c</fullName>
        <label>Registration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rent_Assistance__c</fullName>
        <label>Rent Assistance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rent_Board__c</fullName>
        <label>Rent/Board</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rent__c</fullName>
        <label>Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Repairs__c</fullName>
        <label>Repairs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Resumed_payment_frequency__c</fullName>
        <label>Resumed payment frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_SOFP_Date__c</fullName>
        <label>SOFP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Split_Number__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
AND(NOT( ISBLANK( ScCollection_Contract__c )),ScCollection_Contract__r.ScCollection_Source_System_Name__c == &quot;MORTGAGE&quot;)  
, 
   TEXT(ScCollection_Contract__r.ScCollection_Contract_Split_Number__c)   
, 
 &quot;&quot; 
)</formula>
        <label>Split Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Telephone_Internet__c</fullName>
        <label>Telephone/Internet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_TotalFortnightlyExpenditure__c</fullName>
        <formula>ScCollection_Total_Expenses__c * (12/26)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fortnightly Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Expenses__c</fullName>
        <label>Total Monthly Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Fortnightly_Income__c</fullName>
        <formula>ScCollection_Total_income__c * (12/26)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fortnightly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Monthly_Expenditures__c</fullName>
        <formula>ScCollection_Mortgage_1__c  +  ScCollection_Mortgage_2__c  +  ScCollection_Rent__c  +  ScCollection_Credit_Card_1__c  +  ScCollection_Credit_Card_2__c  +  ScCollection_Credit_Card_3__c  +  ScCollection_Loan_1__c  +  ScCollection_Loan_2__c  +  ScCollection_Rates_Water__c  +  ScCollection_Telephone_Internet__c  +  ScCollection_Mobile_Phone__c  +  ScCollection_Electricity_Gas__c  +  ScCollection_Food__c  +  ScCollection_Clothing__c  +  ScCollection_Personal_Grooming_etc__c  +  ScCollection_Entertainment__c  +  ScCollection_Insurance__c +  ScCollection_Prescriptions__c  +  ScCollection_Petrol__c  + ScCollection_Registration__c  +  ScCollection_Car_Insurance__c  +  ScCollection_Repairs__c  +  ScCollection_Any_Other_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Expenditures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Monthly_Income__c</fullName>
        <formula>ScCollection_Additional__c + ScCollection_After_Tax_Wages_Borrower_1__c + ScCollectionAfter_Tax_Wages_Borrower_3__c+ ScCollection_After_Tax_Wages_Borrower_4__c + ScCollection_After_Tax_Wages_Borrower_2__c + ScCollection_Bonds__c +ScCollection_Dividends__c+ScCollection_Rent_Board__c + ScCollection_Other_Please_State_1__c +ScCollection_Other_Please_State_2__c +ScCollection_Other_Please_State_3__c +ScCollection_Unemployment_Benefits__c+ScCollection_Basic__c+ScCollection_Rent_Assistance__c+ScCollection_OtherPleaseStatefamilyall_1__c+ScCollection_OtherPleaseStatefamilyall_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Surplus__c</fullName>
        <label>Total Surplus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Surplus_or_Deficit__c</fullName>
        <formula>ScCollection_Market_Value_ofThisProperty__c  +  ScCollection_Other_Real_Estate_Owned__c  +  ScCollection_Motor_Vehicles__c  +  ScCollection_Other_Investments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Surplus or Deficit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Weekly_Expenditure__c</fullName>
        <formula>ScCollection_Total_Expenses__c * (12/52)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weekly Expenditure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_Weekly_Income__c</fullName>
        <formula>ScCollection_Total_income__c * (12/52)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weekly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Total_income__c</fullName>
        <label>Total Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Unemployment_Benefits__c</fullName>
        <label>Unemployment Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScColletion_Ad_Hoc_Date_2__c</fullName>
        <label>Ad Hoc Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>scCollection_Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the related PL contract on the Hardship</description>
        <label>PL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Hardship</relationshipLabel>
        <relationshipName>Hardship</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Hardship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HS-{000000}</displayFormat>
        <label>Hardship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hardship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>